# predicting-financial-inclusion-kenya

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PROMPT.md  README.md  app.py  environment.yml  master_prompt.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
data/processed/: rural_youth_model_frame.csv
docs/: data.md  methodology.md  reflection.md  reproducibility.md
models/: best_model.joblib
notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_feature_engineering.ipynb  05_model_development.ipynb  06_model_evaluation.ipynb  07_conclusion.ipynb
reports/tables/: data_dictionary.csv  feature_importance.csv  model_comparison.csv  training_metadata.json
scripts/: generate_notebooks.py
src/: __init__.py  data_loader.py  evaluate.py  feature_engineering.py  predict.py  preprocessing.py  train.py  utils.py  visualization.py
tests/: test_feature_engineering.py  test_predict.py  test_preprocessing.py  test_web_app.py
