[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-inclusion-kenya"
version = "0.1.0"
description = "Machine learning classification case study using the FinAccess 2024 Household Survey."
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
